--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
 
 h1 {
     color: #333;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 350%;
 }
 
 #choices {
